--- a/main.css
+++ b/main.css
@@ -75,10 +75,13 @@ body {
 
 .content h2 {
     color: var(--color1);
+    padding-top: 20px;
+    text-align: center;
 }
 
 .content p {
     color: var(--color2);
+    text-align: center;
 }
 .btn {
     /* font-weight:bold; */
